--- a/styleSheet.css
+++ b/styleSheet.css
@@ -1,9 +1,40 @@
+.myButton {
+    width:400px ;
+    box-shadow:inset 0px 34px 0px -15px #b30000;
+    box-shadow:inset 0px 34px 0px -15px #b30000;
+    box-shadow:inset 0px 34px 0px -15px #b30000;
+    background-color:maroon;
+    border:1px solid #241d13;
+    display:inline-block;
+    cursor:pointer;
+    color:#ffffff;
+    font-family:Arial;
+    font-size:15px;
+    font-weight:bold;
+    padding:9px 23px;
+    text-decoration:none;
+    text-shadow:0px -1px 0px #7a2a1d;
+    margin-right: 4%;
+    margin-left: 4%;
+
+}
+.myButton:hover {
+    background-color:#b34332;
+}
+.myButton:active {
+    position:relative;
+    top:1px;
+}
+
 #name{
     text-align: center;
 }
 ul {
     list-style-type: none;
-    margin: 0;
+    margin-right: 0;
+    margin-left: 0;
+    margin-bottom:0;
+    margin-top: 0;
     padding: 0;
     overflow: hidden;
     background-color: maroon;
@@ -29,4 +60,29 @@ li a:hover:not(.active){
     background-color: black;
     color: yellow;
 }
-
+img{
+    width: 550px;
+    height: 550px;
+    border-color:black;
+    border-style:solid;
+    margin-right: 1%;
+    margin-left: 1%;
+    margin-top: 1%;
+}
+footer{
+    margin-top: 2%;
+    text-align: center;
+    background-color:maroon;
+    box-shadow:inset 0px 34px 0px -15px #b30000;
+    box-shadow:inset 0px 34px 0px -15px #b30000;
+    box-shadow:inset 0px 34px 0px -15px #b30000;
+    padding:5px 20px;
+    color: white;
+    border-radius: 15px;
+}
+#pro{
+    background-color:maroon;
+    padding-bottom: 2%;
+    padding-left: 2%;
+    padding-top: 2%;
+}
